fixing layout issues

--- a/src/AppLayout/AppLayout.scss
+++ b/src/AppLayout/AppLayout.scss
@@ -1,11 +1,41 @@
 $search-bar-color: rgba(9, 197, 214, 0.4);
+$content-max-width: 1280px;
 
-.site-layout {
-    .site-layout-background {
+@media only screen and (max-width: $content-max-width) {
+    .site-layout {
+        .site-layout__container {
+            display: flex;
+
+            .site-layout__container-margin-left, 
+            .site-layout__container-margin-right {
+                display:none;
+            }
+            .site-layout__container-margin-main {
+                width: 100%;
+            }
+        }
+    }
+  }
+  
+.site-layout {   
+    .site-layout__container {
         background: #032646;
         height: 100%;
+        display: grid;
+        grid-template-columns: minmax(0,1fr) minmax($content-max-width ,5fr) minmax(0,1fr);
       }
-    
+     
+    .site-layout__container-margin-left {
+        background-image: url("../Images/welcomepage.jpg");
+
+    }
+    .site-layout__container-margin-main {
+        background-color:green
+    }
+
+    .site-layout__container-margin-right {
+        background-image: url("../Images/welcomepage.jpg");
+    }
 }
 
 .ant-layout {
@@ -73,6 +103,6 @@ $search-bar-color: rgba(9, 197, 214, 0.4);
     }
 
     .ant-menu-submenu-title {
-        // color:white
+        color:white
     }
 }
